# auto-hr

./: .env.example  .gitignore  AGENTS.md  AI工作流设计.md  Demo 技术架构文档.md  Demo 设计文档.md  Demo 需求文档.md  Makefile  README.md  package.json  pnpm-lock.yaml  前端实现规范文档.md  后端实现规范文档.md  实施步骤文档.md  工程实现文档.md  页面路由与前端状态设计.md
apps/: README.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 20260409_0001_initial.py  20260409_0002_job_draft_tables.py  20260409_0003_candidate_tables.py  20260410_0004_job_rubric_scoring_items_array.py  20260410_0005_analysis_runs.py  20260410_0007_initial_schema.py  README.md
apps/api/app/: README.md  __init__.py  main.py
apps/api/app/ai/: README.md  client.py
apps/api/app/api/: README.md  __init__.py  deps.py  router.py  service_deps.py
apps/api/app/core/: README.md  config.py  db.py  exceptions.py  logging.py
apps/api/app/files/: README.md  __init__.py  pdf_extract.py  storage.py  temp_manager.py
apps/api/app/models/: README.md  __init__.py  analysis_run.py  analysis_run_event.py  candidate.py  candidate_document.py  candidate_email_draft.py  candidate_feedback.py  candidate_profile.py  candidate_rubric_result.py  candidate_tag.py  job.py  job_rubric_item.py
apps/api/app/repositories/: README.md  __init__.py  analysis_run_repository.py  candidate_repository.py  job_repository.py
apps/api/auto_hr_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: README.md  conftest.py  test_exceptions.py  test_health.py  test_openai_client.py
(+210 files in other folders)
