[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-hr-api"
version = "0.1.0"
description = "Backend API for the auto-hr demo"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "langchain-core>=0.3.79,<1",
  "openai>=1.107,<2",
  "pypdf>=5.9,<6",
  "pydantic-settings>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
